RESOLVED FIXED186418
[iOS] Inform the client when PDFKit's extension process crashes
https://bugs.webkit.org/show_bug.cgi?id=186418
Summary [iOS] Inform the client when PDFKit's extension process crashes
Andy Estes
Reported 2018-06-07 17:06:56 PDT
[iOS] Inform the client when PDFKit's extension process crashes
Attachments
Patch (4.72 KB, patch)
2018-06-07 17:09 PDT, Andy Estes
no flags
Andy Estes
Comment 1 2018-06-07 17:07:31 PDT
Andy Estes
Comment 2 2018-06-07 17:09:41 PDT
WebKit Commit Bot
Comment 3 2018-06-07 18:03:22 PDT
Comment on attachment 342224 [details] Patch Clearing flags on attachment: 342224 Committed r232608: <https://trac.webkit.org/changeset/232608>
WebKit Commit Bot
Comment 4 2018-06-07 18:03:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.