[iOS] Inform the client when PDFKit's extension process crashes https://bugs.webkit.org/show_bug.cgi?id=186418 <rdar://problem/40175864>

Reviewed by Tim Horton.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::processDidTerminate):
(WebKit::WebPageProxy::dispatchProcessDidTerminate):

Separated the dispatching of delegate methods from the rest of the web
process-specific processDidTerminate logic.

* UIProcess/WebPageProxy.h:
* UIProcess/ios/WKPDFView.mm:
(-[WKPDFView web_setContentProviderData:suggestedFilename:]):

Minor style fix.

(-[WKPDFView pdfHostViewControllerExtensionProcessDidCrash:]):

Called WebPageProxy::dispatchProcessDidTerminate on the main thread.


Canonical link: https://commits.webkit.org/201779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232608 268f45cc-cd09-0410-ab3c-d52691b4dbfc